# Crypto-Candlestick-Aggregation-System

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  python.dockerfile
app/: pyproject.toml
app/src/: candlestick_api.py  database.py
app/tests/unit/: test_candlestick_api.py
candlestick_aggregator/: candlestick_api.py  main.py
docker/: python.dockerfile
docs/: Documentation_en-us.md  Documentation_pt-br.md
tests/unit/: test_candlestick_api.py
