[tool.poetry]
name = "cripto"
version = "0.1.0"
description = "Agregador de dados de cotações de criptomoedas em tempo real."
authors = ["Gabriel Pires <gabrielhpires@gmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
mysql-connector = "^2.2.9"
retry = "^0.9.2"
requests = "^2.25.1"
pytest = "^6.2.4"
freezegun = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

